fix professor API, tests
